--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
-version: '3.4'
+version:  "3.4"
 
 services:
   api:
     build:
       context: .
-      target: production
-
+      target: development
+    volumes:
+      - ./:/usr/src/app
+      - /usr/src/app/node_modules
     ports:
       - 4000:4000
+    command:  npm run dev
